--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 *.xml
 *.class
 /mtk/
+out/production/LeetCode/META-INF/LeetCode.kotlin_module
+out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).md
