--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /mtk/
 out/production/LeetCode/META-INF/LeetCode.kotlin_module
 out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).md
+out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).pdf
