--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 out/production/LeetCode/META-INF/LeetCode.kotlin_module
 out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).md
 out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).pdf
+out/production/LeetCode/exam/README.md
