--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ out/production/LeetCode/META-INF/LeetCode.kotlin_module
 out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).md
 out/production/LeetCode/codingInterviews/README - 剑指Offer(第2版).pdf
 out/production/LeetCode/exam/README.md
+out/production/LeetCode/practice/README.md
